modules/security/main.tf


variable "vpc_id" {}
variable "admin_ip" { description = "Admin IP for SSH access" }


resource "aws_security_group" "alb_sg" {
  name        = "alb-sg"
  description = "Allow HTTP/HTTPS from anywhere"
  vpc_id      = var.vpc_id

  ingress {
    description = "HTTP from Internet"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTPS from Internet"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

    egress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "-1"
    cidr_blocks = [aws_security_group.ec2_sg.id]
    }
}

resource "aws_security_group" "ec2_sg" {
  name        = "ec2-private-sg"
  description = "Allow SSH from Admin and HTTP from ALB"
  vpc_id      = var.vpc_id

  # SSH from Admin IP
  ingress {
    description = "SSH from Admin"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = [var.admin_ip]
  }

  # HTTP from ALB
  ingress {
    description     = "HTTP from ALB"
    from_port       = 80
    to_port         = 80
    protocol        = "tcp"
    security_groups = [aws_security_group.alb_sg.id]
  }

  # Custom TCP 8080 from ALB
  ingress {
    description     = "Custom 8080 from ALB"
    from_port       = 8080
    to_port         = 8080
    protocol        = "tcp"
    security_groups = [aws_security_group.alb_sg.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

output "alb_sg_id" { value = aws_security_group.alb_sg.id }
output "ec2_sg_id" { value = aws_security_group.ec2_sg.id }
